<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/addGroupDialog_container_ll">

    <FrameLayout
        android:id="@+id/addGroupDialog_progressContainer_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone"
        android:alpha=".7">
        <!-- progress -->
        <ProgressBar
            android:id="@+id/addGroupDialog_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"/>

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp">


        <LinearLayout
            android:id="@+id/addGroupDialog_addDeviceForm_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addGroupDialog_name_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/addGroupDialog_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/group_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addGroupDialog_desc_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/addGroupDialog_desc_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/group_desc"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"

                     />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/addGroupDialog_add_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add"
                android:textStyle="bold"
                android:background="@color/colorPrimary"/>

            <!--<Button-->
            <!--android:id="@+id/sign_up_btn"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="@string/sign_up"-->
            <!--android:textStyle="bold"-->
            <!--android:background="@color/colorPrimary"/>-->

        </LinearLayout>
    </ScrollView>
</RelativeLayout>