<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/addDeviceDialog_container_rl">

    <FrameLayout
        android:id="@+id/addDeviceDialog_progressContainer_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone"
        android:alpha=".7">
        <!-- progress -->
        <ProgressBar
            android:id="@+id/addDeviceDialog_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"/>

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp">
        <LinearLayout
            android:id="@+id/addDeviceDialog_addDeviceForm_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addDeviceDialog_name_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/addDeviceDialog_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/device_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addDeviceDialog_desc_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp">

                <EditText
                    android:id="@+id/addDeviceDialog_desc_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/device_desc"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"

                     />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/select_category"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_border"
                    android:layout_marginTop="@dimen/_5sdp">
                    <Spinner
                        android:id="@+id/addDeviceDialog_spinnerCategory_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/select_category"
                        android:padding="@dimen/_5sdp">

                    </Spinner>
                </FrameLayout>

            </LinearLayout>



            <RadioGroup
                android:id="@+id/addDeviceDialog_status_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                >

                <RadioButton
                    android:id="@+id/addDeviceDialog_statusOn_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ON"/>


                <RadioButton
                    android:id="@+id/addDeviceDialog_statusOff_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OFF"
                    android:checked="true"/>

            </RadioGroup>


            <Button
                android:id="@+id/addDeviceDialog_add_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add"
                android:textStyle="bold"
                android:background="@color/colorPrimary"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>